<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>g1_25_assign4_pkg</name>
  <version>0.0.1</version>
  <description>Assignment 4 ROS2 nodes (IMU ingest, approximation, visualization, database).</description>
  <maintainer email="justlikesemih04@gmail.com">broodjesemih</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>lifecycle_msgs</depend>
  <depend>rclcpp_components</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>g1_25_assign4_interfaces_pkg</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
